--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.0.0.RELEASE</version>
     </parent>
 
     <dependencies>
@@ -29,6 +29,7 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- DataBase support -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -39,6 +40,7 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -49,6 +51,7 @@
         <java.version>1.8</java.version>
     </properties>
 
+
     <build>
         <plugins>
             <plugin>
@@ -57,6 +60,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
