--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/sweater
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=123456
 spring.jpa.generate-ddl=true
 
-spring.freemarker.expose-request-attributes=true
-
-upload.path=C:/Users/ai_kiselevich/IdeaProjects/sweater/
-
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.mail.host=smtp.yandex.ru
-spring.mail.username=uw@dru.su
-spring.mail.password=12345678
-spring.mail.port=465
-spring.mail.protocol=smtps
-mail.debug=true
+spring.mustache.expose-request-attributes=true
